--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,5 +20,6 @@ jobs:
     - run: npm ci
     - run: npm test
       env:
+        NASA_API_KEY: ${{secrets.NASA_API_KEY}}
         CI: true
         DATABASE_URL: postgres://postgres:postgres@postgres:5432/postgres
