--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,5 +21,6 @@ jobs:
     - run: npm test
       env:
         NASA_API_KEY: ${{secrets.NASA_API_KEY}}
+        LOCATION_IQ: ${{secrets.LOCATION_IQ}}
         CI: true
         DATABASE_URL: postgres://postgres:postgres@postgres:5432/postgres
